--- a/style.css
+++ b/style.css
@@ -1,49 +1,152 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway');
+
+/*################################*/
+/*                               */
+/*             Imports          */
+/*                             */
+/*############################*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@600&display=swap');
+
+/*################################*/
+/*                               */
+/*             General          */
+/*                             */
+/*############################*/
 
 :root {
-    --primarypink: #EB9B9A;
-    --primarygray: #515151;
-    --accent: #2E3A59;
-    --secondarypink: #E3A5A4;
-    --primaryblack: #000;
+    --base: #e6e4e4;
+    --primary: #5f5f5f;
+    --accent: #EB9B9A;
+    --accent2: #ce8786;
 }
 * {
-    margin: 0 0 .3rem 0;
-    text-decoration: none;
-    color: var(--primarygray);
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+
 }
 
 html {
     scroll-behavior: smooth;
-  }
+}
+body{
+    background-color: var(--base);
+}
 
-body {
-    background-color: var(--primarypink);
-    font-family: 'Raleway', sans-serif;
+header {
+    position: sticky;
+    height: 0;
+    top: 0;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    padding: 30px 10%;
 }
 section{
     display: flex;
     height: 100vh;
-    width: 75%;
 }
-
 
 /*################################*/
 /*                               */
-/*  LOGO AND NAVIGATION BAR     */
+/*             TEXT             */
 /*                             */
 /*############################*/
 
+li, a, button {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
+    letter-spacing: .2rem;
+    color: var(--primary);
+    text-decoration: none;
+}
+h1, p{
+    font-family: "Bodoni Moda", serif;
+    text-align: center;
+}
 
+/*################################*/
+/*                               */
+/*         HEADER               */
+/*                             */
+/*############################*/
+.logo {
+    cursor: pointer;
+}
+
+.nav_links {
+    list-style: none;
+}
+.nav_links li {
+    display: inline-block;
+    padding: 0 20px;
+}
+.nav_links li a {
+    text-transform: uppercase;
+    transition: all .3s ease 0s;
+}
+.nav_links li a::after{
+    display: block;
+    content: '';
+    border-bottom: 2px var(--accent) solid;
+    transform: scaleX(0);
+    transition: transform 250ms ease-in-out;
+}
+.nav_links li a:hover, li a:focus{
+    color: var(--accent);
+    outline: none;
+}
+.nav_links li a:hover::after, li a:focus::after{
+    transform: scaleX(1);
+}
+button {
+    text-transform: uppercase;
+    padding: 0.6rem 1.5rem;
+    background-color: var(--accent);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all .3s ease 0s;
+}
+button:hover{
+    background-color: var(--accent2);
+}
 /*################################*/
 /*                               */
 /*         HERO SECTION         */
 /*                             */
 /*############################*/
-
+#hero {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 15%;
+}
+#hero_text {
+    z-index: 100;
+}
+#hero h1{
+    font-size: 3rem;
+}
+#hero p {
+    margin-top: 10%;
+    width: 40ch;
+}
+#svg1{
+    position: absolute;
+    right: 20%;
+    width: 35vw;
+}
+.path {
+    fill: none;
+    stroke-width: 0.75;
+    stroke-miterlimit: 10;
+    stroke: var(--primary);
+    stroke-dasharray: 2500;
+    stroke-dashoffset: 1000;
+    animation: dash 6s infinite ease-in-out alternate;
+}
 
 /*################################*/
 /*                               */
@@ -64,7 +167,14 @@ section{
 /*          ANIMATIONS          */
 /*                             */
 /*############################*/
-
+@keyframes dash {
+    from{
+        stroke-dashoffset: 2500;
+    }
+    to {
+        stroke-dashoffset: 0;
+    }
+}
 
 
 /*################################*/
