--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 
 :root {
     --base: #e6e4e4;
+    --base2: #dadada;
     --primary: #5f5f5f;
     --secondary:#d1d0d0;
     --accent: #EB9B9A;
@@ -37,6 +38,7 @@ body{
     font-family: 'Jost', sans-serif;
     justify-content: center;
     align-items: center;
+    z-index: 5;
 }
 
 header {
@@ -47,8 +49,10 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
+    z-index: 10;
 }
 section{
+    margin-bottom: 15px;
     display: flex;
     height: 100vh;
     width: 90%;
@@ -80,6 +84,9 @@ li, a, button{
     top: -3em;
     font-size: 1.5rem;
     color: var(--base);
+}
+#service .service_card .service_semis{
+    top: -2.2em;
 }
 #service .service_card p {
     padding: 10px;
@@ -156,9 +163,6 @@ button:hover{
     align-items: center;
     margin-left: 15%;
 }
-#hero_text {
-    z-index: 100;
-}
 #hero h1{
     font-size: 3rem;
 }
@@ -196,17 +200,31 @@ button:hover{
 }
 
 .service_card {
-    width: 40ch;
+    width: 20em;
     border-radius: 15px;
-    height: 35em;
-    background-color: var(--secondary);
+    height: 34em;
+    background-color: var(--base2);
 }
-.service_card img {
-    border-radius: 15px 15px 0 0;
-    max-height: 50%;
+.service_card .service_img {
     width: 100%;
-    object-fit: cover;
+    height: 50%;
+    border-radius: 15px 15px 0 0;
+    box-shadow: inset 0 -5em 50px -10px rgba(0,0,0,0.7);
 }
+.service_card .service_img_1{
+    background: url(img/test.png);
+    background-size: cover;
+}
+.service_card .service_img_2{
+    background: url(img/test.png);
+    background-size: cover;
+}
+.service_card .service_img_3{
+    background: url(img/test.png);
+    background-size: cover;
+}
+
+
 .service_card .service_description{
     display: flex;
     justify-content: center;
@@ -220,8 +238,8 @@ button:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
-    height: 3em; 
+    margin-bottom: 10px;
+    height: 3em;
 }
 
 .card_price_box h2 {
@@ -232,7 +250,7 @@ button:hover{
     margin: 10px 0 20px;
 }
 .card_price_box h2 span{
-    background-color: var(--secondary);
+    background-color: var(--base2);
 }
 
 
@@ -264,12 +282,18 @@ button:hover{
 /*      RESPONSIVE CODE         */
 /*                             */
 /*############################*/
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 768px){
     #svg1{ top: 10%;}
     #service{
         flex-direction: column;
         height: auto;
     }
-    #service .service_card{ margin: 20px; width: 80%; height: 40em;};
+    #service .service_card{ margin: 20px; width: 80%; height: 43em;};
     #service .service_card img {max-height: 70%;}
+}
+
+@media screen and (max-width: 1200px){
+    #service{
+        flex-wrap: wrap;
+    }
 }
