--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 /*############################*/
 
 :root {
-    --base: #e6e4e4;
+    --base: rgba(230, 228, 228, 1);
     --base2: #dadada;
     --primary: #5f5f5f;
     --secondary:#d1d0d0;
@@ -42,6 +42,7 @@ body{
 }
 
 header {
+    width: 100%;
     position: sticky;
     height: 0;
     top: 0;
@@ -50,6 +51,7 @@ header {
     align-items: center;
     padding: 30px 10%;
     z-index: 10;
+    background-color: var(--base);
 }
 section{
     margin-bottom: 15px;
@@ -209,7 +211,7 @@ button:hover{
     width: 100%;
     height: 50%;
     border-radius: 15px 15px 0 0;
-    box-shadow: inset 0 -5em 50px -10px rgba(0,0,0,0.7);
+    box-shadow: inset 0 -5em 50px -10px rgba(0,0,0,0.8);
 }
 .service_card .service_img_1{
     background: url(img/test.png);
