--- a/style.css
+++ b/style.css
@@ -225,6 +225,8 @@ h2 span{
 .hero {
     justify-content: flex-start;
     align-items: center;
+    min-height: 100vh;
+    height: auto;
 }
 .main-presentation{
     margin-left: 15%;
@@ -261,6 +263,7 @@ h2 span{
         margin-left: 0;
         justify-content: center;
         flex-direction: column;
+        
     }
     #svg1{
         top: 15%;
@@ -289,7 +292,7 @@ h2 span{
     min-width: 300px;
     width: 25vw;
     border-radius: 15px;
-    min-height: 500px;
+    min-height: 28em;
     height: 80vh;
     background-color: var(--base2);
 }
@@ -311,11 +314,11 @@ h2 span{
     background-size: cover;
 }
 .service-img-2{
-    background: url(img/test.png);
+    background: url(img/test2.png);
     background-size: cover;
 }
 .service-img-3{
-    background: url(img/test.png);
+    background: url(img/test3.png);
     background-size: cover;
 }
 
@@ -323,7 +326,8 @@ h2 span{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 10em;
+    min-height: 7em;
+    height: 20vh;
 }
 .service-description p {
     width: 80%;
@@ -388,6 +392,7 @@ h2 span{
 }
 #galery {
     height: 100vh;
+    min-height: 40em;
 }
 .galery-title{
     position: relative;
@@ -437,6 +442,23 @@ h2 span{
         padding-top: 80%;
     }
 }
+/*################################*/
+/*                               */
+/*       CONTACT SECTION        */
+/*                             */
+/*############################*/
+.contact-form{
+    height: 100vh;
+    font-size: 1rem;
+}
+.contact-form input, select{
+    outline: none;
+    border: none;
+    border-bottom: 1px solid var(--accent);
+    background: var(--base);
+}
+
+
 /*################################*/
 /*                               */
 /*          ANIMATIONS          */
