--- a/style.css
+++ b/style.css
@@ -354,13 +354,12 @@ h2 span{
 @media (max-width: 768px){
     .service-card{
         width: 100%;
-        height: 80vh;
+        height: 40em;
     }
     .service-description {
         height: auto;
-        margin: 6vh 0;
+        margin: 2em 0;
     }
-    .service-card img {max-height: 70%;}
     .card-price-box {
         margin: 5px 0;
     }
@@ -448,16 +447,31 @@ h2 span{
 /*                             */
 /*############################*/
 .contact-form{
-    height: 100vh;
-    font-size: 1rem;
+    height: 100%;
+    width: 100%;
+    min-height: 5em;
+    font-size: 1.7rem;
 }
 .contact-form input, select{
     outline: none;
     border: none;
-    border-bottom: 1px solid var(--accent);
+    border-bottom: 1px solid var(--primary);
     background: var(--base);
 }
 
+.contact-form input, label, select {
+    width: 95%;
+    height: auto;
+    padding: 20px;
+}
+.contact-form .btn {
+    margin-top: 20px;
+    font-size: 1.7rem;
+}    
+
+#contact2 a{
+    padding: 40px;
+}
 
 /*################################*/
 /*                               */
